# wolfyi

./: MANIFEST.in  pyproject.toml  setup.py
src/wolfyi/: __init__.py  add_user.py  create_invite.py  run.py  wsgi.py
src/wolfyi/application/: __init__.py  admin.py  api.py  models.py  routes.py  utils.py
src/wolfyi/application/templates/: login.html
src/wolfyi/templates/: account.html  base.html  create_form.html  created.html  delete.html  edit.html  index.html  js-app.html  login.html  message.html  register.html  sign_up.html
