[project]
name = "wolfyi"
version = "0.0.1"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
description = "A simple URL shortener"
keywords = ["URL shortener"]
dependencies = [
    "appdirs",
    "Flask",
    "Flask-Admin",
    "Flask-Login",
    "peewee",
    "pyIsEmail",
    "wtf-peewee",
]

[[project.authors]]
name = "Zeev Rotshtein"
email = "zeevro@gmail.com"

[project.urls]
Repository = "https://github.com/zeevro/wolfyi"
Download = "https://github.com/zeevro/wolfyi/archive/master.zip"

[project.scripts]
wolfyi-server = "wolfyi.run:main"
wolfyi-add-user = "wolfyi.add_user:main"
wolfyi-create-invite = "wolfyi.create_invite:main"

[tool.ruff]
select = ["ALL"]
ignore = [
    "C90", "N", "D", "ANN", "FBT", "EM", "PT", "SLF", "ARG", "FIX", "ERA",
    "E402", "E501", "E741",
    "S105", "S108", "S113", "S311", "S324", "S603", "S604", "S607",
    "BLE001",
    "B905",
    "A003",
    "G00",
    "TD002", "TD003",
    "PGH003",
    "PLR09", "PLR2004",
    "PLW0603",
    "TRY003", "TRY301",
    "RUF012",
]
namespace-packages = ["scripts"]
line-length = 150
target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"

[tool.black]
skip-string-normalization = true
line-length = 150

[tool.flynt]
transform-concats = true
transform-joins = true
